--- a/viz-web-view/src/index.css
+++ b/viz-web-view/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.filterForm {
+  display: flex;
+  flex-direction: row;
+}
+
+.filter {
+  margin-left: 20px;
+}
