Removed Unused variables in calendarBuilder.js and improved mouseover for cell

--- a/viz-web-view/src/index.css
+++ b/viz-web-view/src/index.css
@@ -1,44 +1,45 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 .filterForm {
-  display: flex;
-  flex-direction: row;
-  font-size: 0.8em;
-  padding-left: 20px;
+	display: flex;
+	flex-direction: row;
+	font-size: 0.8em;
+	padding-left: 20px;
 }
 
 .filter {
-  margin-left: 20px;
+	margin-left: 20px;
 }
 
-.checkbox-list  {
-  max-height: 100px;
-  overflow-y: scroll;
+.checkbox-list {
+	max-height: 100px;
+	overflow-y: scroll;
 }
 
 .filter-attribute {
-  padding: 95px 0;
-  font-weight: bold;
+	padding: 95px 0;
+	font-weight: bold;
 }
 
 .cell-tooltip {
-  position: absolute;
-  cursor: default;
-  background: rgba(0, 0, 0, 0.7);
-  border-radius: 15px;
-  padding: 8px;
-  color: white;
-  font-family: SYSTEM-UI;
+	position: absolute;
+	cursor: default;
+	background: rgba(0, 0, 0, 0.7);
+	border-radius: 15px;
+	padding: 8px;
+	color: white;
+	font-family: SYSTEM-UI;
+	border: solid 2px blue;
 }
