Change color scale to schemeBrBG. Added real flights data

--- a/viz-web-view/src/index.css
+++ b/viz-web-view/src/index.css
@@ -5,6 +5,7 @@ body {
 		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+  user-select: none;
 }
 
 code {
@@ -36,7 +37,7 @@ code {
 .cell-tooltip {
 	position: absolute;
 	cursor: default;
-	background: rgba(0, 0, 0, 0.7);
+	background: rgba(0, 0, 0, 0.9);
 	border-radius: 15px;
 	padding: 8px;
 	color: white;
