--- a/viz-web-view/src/index.css
+++ b/viz-web-view/src/index.css
@@ -34,7 +34,7 @@ code {
 	font-weight: bold;
 }
 
-.cell-tooltip {
+.tooltip {
 	position: absolute;
 	cursor: default;
 	background: rgba(0, 0, 0, 0.9);
